feat(layout): new layout update

--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -1,7 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
- 
+
+/* Seus estilos globais aqui */
+
 @layer base {
   :root {
     --background: 0 0% 100%;
